[gd_scene load_steps=16 format=3 uid="uid://c8aqefohsnwby"]

[ext_resource type="Script" path="res://combat_gui.gd" id="1_dgkmr"]
[ext_resource type="Texture2D" uid="uid://bfaxao1a8bo76" path="res://art/ui/combat/combat_ui_v2/background.png" id="2_yp28c"]
[ext_resource type="Texture2D" uid="uid://dh5dnlhmds4vb" path="res://art/ui/combat/combat_ui_v1/health_bars/gray_bar.png" id="3_d7a1w"]
[ext_resource type="SpriteFrames" uid="uid://15f7dy8881tn" path="res://enemy.tres" id="4_oc1yd"]
[ext_resource type="Texture2D" uid="uid://cx31yayiwhamx" path="res://art/ui/combat/combat_ui_v1/health_bars/green_bar.png" id="4_s3jjx"]
[ext_resource type="FontFile" uid="uid://ddqgixpjigtib" path="res://fonts/NESCyrillic.ttf" id="7_0tnrd"]
[ext_resource type="SpriteFrames" uid="uid://b615m8ddqw36u" path="res://player_combat.tres" id="8_hq5nd"]
[ext_resource type="PackedScene" uid="uid://dprvni6fde6dc" path="res://src/components/spells_component.tscn" id="9_a5vcp"]
[ext_resource type="Script" path="res://PlayerSprite.gd" id="9_w2uuc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf5w2"]
texture = ExtResource("3_d7a1w")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rcx4a"]
texture = ExtResource("4_s3jjx")

[sub_resource type="Animation" id="Animation_sgarp"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_n3irb"]
resource_name = "swing_attack"
length = 2.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 0, 1, 2, 3, 4, 5, 6, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack_slash"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lyvkq"]
_data = {
"RESET": SubResource("Animation_sgarp"),
"swing_attack": SubResource("Animation_n3irb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewjaf"]
bg_color = Color(0.201527, 0.201527, 0.201526, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[node name="CombatGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_dgkmr")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 180)
scale = Vector2(0.167, 0.167)
texture = ExtResource("2_yp28c")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(120, 160)
sprite_frames = ExtResource("4_oc1yd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemySprite"]

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 100.0
offset_right = 194.0
offset_bottom = -116.0
grow_vertical = 2

[node name="HealthBarControl" type="Control" parent="EnemyContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="EnemyContainer/HealthBarControl"]
layout_mode = 0
offset_right = 144.0
offset_bottom = 32.0
theme_override_styles/background = SubResource("StyleBoxTexture_rf5w2")
theme_override_styles/fill = SubResource("StyleBoxTexture_rcx4a")
step = 1.0
value = 60.0
show_percentage = false

[node name="Health" type="Label" parent="EnemyContainer/HealthBarControl/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -7.0
offset_right = 27.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_0tnrd")
text = "15/24"

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(465, 136)
sprite_frames = ExtResource("8_hq5nd")
animation = &"idle"
script = ExtResource("9_w2uuc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSprite"]
libraries = {
"": SubResource("AnimationLibrary_lyvkq")
}

[node name="AnimationTimer" type="Timer" parent="PlayerSprite"]
one_shot = true

[node name="PlayerContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -226.0
offset_top = 100.0
offset_right = -82.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 2

[node name="HealthBarControl" type="Control" parent="PlayerContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="PlayerContainer/HealthBarControl"]
layout_mode = 2
offset_right = 144.0
offset_bottom = 32.0
theme_override_styles/background = SubResource("StyleBoxTexture_rf5w2")
theme_override_styles/fill = SubResource("StyleBoxTexture_rcx4a")
step = 1.0
value = 60.0
show_percentage = false

[node name="Health" type="Label" parent="PlayerContainer/HealthBarControl/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -7.0
offset_right = 27.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_0tnrd")
text = "15/24"

[node name="SpellsComponent" parent="PlayerContainer" instance=ExtResource("9_a5vcp")]

[node name="ActionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -190.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 20.0
offset_right = -47.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionsContainer" type="HBoxContainer" parent="ActionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="AttackButton" type="Button" parent="ActionsPanel/MarginContainer/ActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_0tnrd")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ewjaf")
text = "Attack"

[node name="DefendButton" type="Button" parent="ActionsPanel/MarginContainer/ActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_0tnrd")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ewjaf")
text = "Defend"

[node name="SpellsButton" type="Button" parent="ActionsPanel/MarginContainer/ActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_0tnrd")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ewjaf")
action_mode = 0
text = "Spells
"

[node name="StealButton" type="Button" parent="ActionsPanel/MarginContainer/ActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("7_0tnrd")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ewjaf")
text = "Steal
"

[connection signal="spell_animation" from="." to="PlayerSprite" method="_on_combat_gui_spell_animation"]
[connection signal="timeout" from="PlayerSprite/AnimationTimer" to="PlayerSprite" method="_on_animation_timer_timeout"]
[connection signal="pressed" from="ActionsPanel/MarginContainer/ActionsContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="ActionsPanel/MarginContainer/ActionsContainer/SpellsButton" to="." method="_on_spells_button_pressed"]
